[package]
name = "glutin-basic-window"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["egl", "glx", "x11", "wayland", "wgl"]
egl = ["glutin-winit/egl", "png"]
glx = ["glutin-winit/glx"]
wgl = ["glutin-winit/wgl"]
x11 = ["glutin-winit/x11"]
wayland = ["glutin-winit/wayland", "winit/wayland-dlopen", "winit/wayland-csd-adwaita"]

[dependencies]
glutin = "0.31.1"
glutin-winit = "0.4.2"
png = { version = "0.17.6", optional = true }
raw-window-handle = "0.5"
winit = { version = "0.29.2", default-features = false, features = ["rwh_05"] }
gl = "0.14"

[target.'cfg(target_os = "android")'.dependencies]
winit = { version = "0.29.2", default-features = false, features = ["android-native-activity", "rwh_05"] }

[build-dependencies]
cfg_aliases = "0.1.1"
